--- a/lista.html
+++ b/lista.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <header class="menu2">
+  <header class="menu">
     <h3 class="titleMenu">Tecnologia Web</h3>
   </header>
   <h1 class="titleLista">Lista de Produtos</h1>
