--- a/lista.html
+++ b/lista.html
@@ -17,9 +17,8 @@
         <th>Código Produto</th>
         <th>Nome Produto</th>
         <th>Unidade</th>
+        <th>Quantidade comprada</th>
         <th>Quantidade necessário</th>
-        <th>Quantidade cadastrado</th>
-        <th>Quantidade comprado</th>
         <th>Coletado</th>
       </tr>
     </thead>
